[backend] Basic directory traverse operation and ExceptionHandler were added
